--- a/src/App.css
+++ b/src/App.css
@@ -56,4 +56,15 @@
     color:white;
     background-color: red;
     border-radius: 10px;
+    margin:1rem;
+}
+
+.comment button{
+    float: right;
+    margin-top: -30px;
+}
+
+.new-comment{
+    width:90%;
+    height:100px;
 }
