--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,30 @@
     width:90%;
     height:100px;
 }
+
+.popup {
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0,0,0,0.4);
+	}
+	
+	.popup-inner {
+	background-color: white;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	padding: 60px;
+	border-radius: 5px;
+	box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+	width: 30%;
+	}
+	
+	.popup-inner h2 {
+	margin-top: 0;
+	}
