refactored according to feedback

--- a/src/App.css
+++ b/src/App.css
@@ -96,4 +96,7 @@
 	margin-top: 0;
 	}
 
-    .pointer{pointer-events:none;}
+    .pointer{pointer-events:none;
+        opacity: 0.6;
+        cursor: not-allowed;
+    }
