--- a/src/App.css
+++ b/src/App.css
@@ -100,3 +100,12 @@
         opacity: 0.6;
         cursor: not-allowed;
     }
+
+    .error{
+        background-color: rgb(120, 25, 161);
+        height:100px;
+        border: 1px solid white;
+        border-radius: 15px;
+        color:white;
+        padding: 1rem;
+    }
