--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,9 @@
 }
 
 .user img{
-    height:50px;
-    width:50px;
+    height:40px;
+    width:40px;
+    margin-right: 10px;
 }
 
 .head h1{
@@ -17,6 +18,7 @@
     border-radius: 15px;
     padding: 1rem;
     margin:1rem;
+    width:80%;
     display: grid;
     grid-template-columns: repeat(2,40%);  
 }
@@ -36,25 +38,27 @@
         grid-template-columns: auto auto;  
     } 
     .article img{
-        width:150px;
+        width:130px;
     
     }
 }
 
 .head-link{
     border:1px solid;
-    background-color: red;
+    background-color: rgb(222, 20, 20);
     padding: 2px;
     margin: 2px;
+    border-radius: 5px;
     color:white;
 }
 .App{
-    background-color: aquamarine;
+    background-color: lemonchiffon;/*rgb(179, 222, 127);*/
+    border-radius: 15px;
 }
 .comment{
     border:1px solid red;
     color:white;
-    background-color: red;
+    background-color: rgb(222, 20, 20);
     border-radius: 10px;
     margin:1rem;
 }
@@ -67,6 +71,8 @@
 .new-comment{
     width:90%;
     height:100px;
+    border-radius: 15px;
+    background-color: whitesmoke;
 }
 
 .popup {
@@ -102,10 +108,41 @@
     }
 
     .error{
-        background-color: rgb(120, 25, 161);
+        background-color: rgb(222, 20, 20);
         height:100px;
         border: 1px solid white;
         border-radius: 15px;
         color:white;
         padding: 1rem;
     }
+
+    button{
+        background-color:cornflowerblue;
+        color: white;
+        border-radius: 15px;
+    }
+
+    button:hover{
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    }
+
+    .sort{
+        display:flex;
+        flex-wrap: wrap;
+        padding:5px;
+        height:30px;
+    }
+    .sort select{
+        border-radius: 15px;
+    }
+
+    .sort :hover{
+        box-shadow: 0 8px 16px 0 rgba(8, 8, 8, 0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    }
+    .sort label{
+        margin-left: 15px;
+        margin-top: 5px;
+        font-weight: bold;
+    }
+
+    
