--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@
     background-color: rgb(222, 20, 20);
     border-radius: 10px;
     margin:1rem;
+    width:85%;
 }
 
 .comment button{
@@ -69,10 +70,13 @@
 }
 
 .new-comment{
-    width:90%;
+    width:85%;
     height:100px;
     border-radius: 15px;
     background-color: whitesmoke;
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-bottom: 15px;
 }
 
 .popup {
@@ -105,6 +109,7 @@
     .pointer{pointer-events:none;
         opacity: 0.6;
         cursor: not-allowed;
+        margin:5px;
     }
 
     .error{
@@ -145,4 +150,6 @@
         font-weight: bold;
     }
 
-    
+    .button{
+        margin:5px;
+    }
