--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,10 @@
     margin-bottom: 15px;
 }
 
+.new-comment:hover{
+    box-shadow: 1px 1px 2px 2px rgb(222, 20, 20);
+}
+
 .popup {
 	position: fixed;
 	z-index: 1;
