--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,12 @@
     justify-content: center;
 }
 
+.head{
+    background-color: rgb(245, 196, 82);
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
 .article{
     border:1px solid rgb(222, 26, 26);
     border-radius: 15px;
@@ -24,6 +30,10 @@
     display: grid;
     grid-template-columns: repeat(2,40%); 
     background-color: rgb(242, 188, 62); /*rgb(239, 182, 51)*/
+}
+
+.article:hover{
+    box-shadow: 0.5px 0.5px 1px 2px rgb(134, 11, 11);
 }
 
 .article img{
@@ -168,4 +178,16 @@ body{
     height: 100px;
     width:100px;
     /* display: inline-block; */
+}
+
+.normal{
+    background-color:whitesmoke;
+    color: black;
+    margin:5px;
+}
+
+.highlighted{
+    background-color:cornflowerblue;
+    color: white;
+    margin:5px;
 }
